// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThemeProvider can apply body theme to body 1`] = `<body />`;

exports[`ThemeProvider can apply body theme to body 2`] = `
<div
  className="foo"
>
  app
</div>
`;

exports[`ThemeProvider can apply body theme to none 1`] = `
<div
  className="foo"
>
  app
</div>
`;

exports[`ThemeProvider can handle a partial theme 1`] = `
<div
  className=""
>
  Hello
</div>
`;

exports[`ThemeProvider renders a div 1`] = `
<div
  className=""
>
  Hello
</div>
`;

exports[`ThemeProvider renders a div with styling 1`] = `
<div
  className=""
>
  Hello
</div>
`;

exports[`ThemeProvider renders nested themes 1`] = `
<div
  className=""
>
  <div>
    Light theme
  </div>
  <div
    className=""
  >
    <div>
      Dark theme
    </div>
  </div>
</div>
`;
